--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  zpdl_studio_bloc:
+    path: ../../zpdl_studio_bloc
 
 dev_dependencies:
   flutter_test:
