Example Album Folder

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   zpdl_studio_bloc:
     path: ../../zpdl_studio_bloc
 
+  rxdart: ^0.24.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
