--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,7 +31,7 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
-        minSdkVersion 29
+        minSdkVersion 21
     }
     lintOptions {
         disable 'InvalidPackage'
@@ -40,6 +40,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.exifinterface:exifinterface:1.3.0"
 
     api "io.reactivex.rxjava2:rxjava:2.2.1"
     api "io.reactivex.rxjava2:rxandroid:2.1.0"
